# multicast-notification-service

./: .gitignore  .redocly.lint-ignore.yaml  .tool-versions  Makefile  README.md  manifest_template.yml  package-lock.json  package.json  pyproject.toml  test-report.xml
.github/: dependabot.yml
.github/workflows/: continuous-integration.yml  dependabot-auto-merge.yaml  pr-lint.yaml  scheduled-combine-dependabot-prs.yaml
azure/: azure-build-pipeline.yml  azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
azure/templates/: run-pytests.yml  run-sandbox-tests.yml  run-tests.yml
postman/sandbox/: Multicast Notification Sandbox.postman_collection.json  Multicast_Notification_Sandbox.postman_collection.json
proxies/live/apiproxy/: proxy.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: Dockerfile  Makefile  app.js  app.spec.js  handlers.js  mockEvent.js  mockEvents.js  mockSubscriptions.js  package-lock.json  package.json
scripts/: apply_block_replacements.py  extract_example.py  install-tools.sh  make-signal-examples.sh  spec_postprocessor.py
signal-schemas/: fhirsignal.schema.json  fhirsignal.schema.json.yaml
signal-schemas/examples/gpreg-change-gp-req-1/: hydrated-signal.json  signal.json
signal-schemas/examples/imms-vaccination-record-change-1/: signal.json
signal-schemas/examples/imms-vaccinations-1/: signal.json
signal-schemas/examples/nhs-number-change-2/: signal.json
signal-schemas/examples/nhshco-hc-complete-1/: signal.json
signal-schemas/examples/pathology-laboratory-reporting-test-result-stored-1/: signal.json
signal-schemas/examples/patientflags-change-1/: signal.json
signal-schemas/examples/pdm-resource-change-1/: signal.json
signal-schemas/examples/pds-change-of-gp-2/: signal.json
signal-schemas/examples/pds-death-notification-2/: signal.json
signal-schemas/examples/pds-record-change-2/: signal.json
signal-schemas/examples/proxy-role-change-1/: signal.json
signal-schemas/examples/vrs-proxy-role-changed-1/: signal.json
specification/: multicast-notification-service.yaml  vacuum-ignore.yaml
specification/components/schemas/: Patient.yaml  (+7 more)
specification/requestBody/: create-or-update-subscription-body.yaml
specification/responses/: 400-subscription-id.yaml  401-unauthenticated.yaml  403-unauthorised.yaml  409-matching-subscription.yaml  500-internal-server-error.yaml
tests/: test_endpoints.py  test_smoketest.py
tests/auth_utils/: authorisation_wrapper.py
tests/data/: immunisation-vaccination-event-mds.json  nhs-number-change-event-mds.json  pds-change-of-gp-event-fhir.json  pds-change-of-gp-event-mds.json  pds-death-event-mds.json
(+79 files in other folders)
