[project]
name = "multicast-notification-service"
python = "^3.12"

[tool.poetry]
description = "multicast-notification-service"
version = "0.0.1-alpha"
authors = ["NHS England"]
package-mode = false
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/multicast-notification-service"
homepage = "https://github.com/NHSDigital/multicast-notification-service"
keywords = ["healthcare", "uk", "nhs", "events"]


[tool.poetry.dependencies]
python = "^3.12"
pytest-nhsd-apim = "^3.3.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^24.4"
pip-licenses = "^4.5.1"
jinja2 = "^3.1.5"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.44"
pytest = "^6.1.2"
coverage = "^7.6"
aiohttp = "^3.10.2"
pytest-asyncio = "^0.20.3"

[tool.poetry.scripts]
