[project]
name = "multicast-notification-service"
python = "^3.10"

[tool.poetry]
description = "multicast-notification-service"
version = "0.0.1-alpha"
authors = ["NHS England"]
package-mode = false
readme = 'README.md'
license = "MIT"
repository = "https://github.com/NHSDigital/multicast-notification-service"
homepage = "https://github.com/NHSDigital/multicast-notification-service"
keywords = ["healthcare", "uk", "nhs", "events"]


[tool.poetry.dependencies]
python = "^3.10"
pytest-nhsd-apim = "^5.0.4"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1"
pip-licenses = "^5.0.0"
jinja2 = "^3.1.6"
pyyaml = "^6.0"
docopt = "^0.6.2"
jsonpath-rw = "^1.4.0"
semver = "^3.0.2"
gitpython = "^3.1.45"
pytest = "^8.4.1"
coverage = "^7.10"
aiohttp = "^3.12.15"
pytest-asyncio = "^1.1.0"

[tool.poetry.scripts]
